# vestoria-fund-manager

./: SERVER_STARTUP.md  docker-compose.demo.yml  docker-compose.yml  nginx.conf  update.sh
backend/: pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/models/: investor.py
backend/app/schemas/: fund.py  investor.py
backend/app/services/: fund_service.py  investor_service.py  operation_history_service.py
backend/dev_logs/: BUG_FIXES_0.md
backend/migrations/: 001_migrate_data.py  003_migrate_investor_cumulative.py  004_migrate_investor_snapshots.py  README.md
frontend/: .gitignore  Dockerfile  package.json
frontend/src/components/common/: Button.tsx
frontend/src/pages/: Dashboard.tsx  DataImportExport.tsx  FundDetail.tsx  Funds.tsx  InvestorDetail.tsx  Investors.tsx
frontend/src/stores/: fund.ts
frontend/src/types/: api.ts
tests/: README.md
