[project]
name = "fund-manager-backend"
version = "1.0.0"
description = "Fund management system backend"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.35",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.6.1",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.12",
    "alembic>=1.14.0",
    "bcrypt>=5.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
